Remove padding to fix iPhone layout issue

--- a/css/p1_style.css
+++ b/css/p1_style.css
@@ -1,5 +1,6 @@
 #container {
 	text-align:center;
+	padding: 0px;
  }
 #bio {
 	margin-bottom: 30px;
